Bizfi Production/src/objects/Funding_Information__c.object
<CustomObject>
    <fields>
        <fullName>APR__c</fullName>
        <label>APR</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Advance_Rate__c</fullName>
        <label>Advance Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a Bank.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Bank,ISO,Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Funding Informations</relationshipLabel>
        <relationshipName>Funding_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buy_Rate__c</fullName>
        <label>Buy Rate</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Credit_Line_Amount__c</fullName>
        <label>Credit Line Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Funded__c</fullName>
        <label>Funded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <label>Deal Type</label>
        <picklist>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Line of Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Financing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Renewal_Date__c</fullName>
        <label>Estimated Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Factor_Rate__c</fullName>
        <label>Factor Rate</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Funded_Notes__c</fullName>
        <label>Funded - Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Funding_Amount__c</fullName>
        <label>Funded $</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holdback_Percentage__c</fullName>
        <label>Holdback %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lease_Type__c</fullName>
        <label>Lease Type</label>
        <picklist>
            <picklistValues>
                <fullName>FMV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyout</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Origination_Fee__c</fullName>
        <label>Origination Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payback_Amount__c</fullName>
        <label>Payback $</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Funding Informations</relationshipLabel>
        <relationshipName>Funding_Informations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <label>Payment Schedule</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Term_Months__c</fullName>
        <label>Term (Months)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <historyRetentionPolicy>
        <archiveAfterMonths>18</archiveAfterMonths>
        <archiveRetentionYears>10</archiveRetentionYears>
        <description>Funding Information History</description>
        <gracePeriodDays>1</gracePeriodDays>
    </historyRetentionPolicy>
    <label>Funding Information</label>
    <nameField>
        <displayFormat>FI-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>